name: finalproject
version: 0.1.0.0
build-type: Simple

executable finalp
  main-is: finalp.hs
  build-depends:
    base >= 4.8 && < 5
  default-language: Haskell2010

test-suite finalp-test
  type: exitcode-stdio-1.0
  main-is: finalp-test.hs
  build-depends:
    base >= 4.8 && < 5
  default-language: Haskell2010

clean:
  rm -f *.o *.hi finalp